--- a/requirements.txt
+++ b/requirements.txt
@@ -6,12 +6,12 @@ certifi==2020.12.5
 chardet==4.0.0
 cycler==0.10.0
 flatbuffers==1.12
-gast==0.3.3
+gast==0.4.0
 google-auth==1.27.1
 google-auth-oauthlib==0.4.3
 google-pasta==0.2.0
-grpcio==1.32.0
-h5py==2.10.0
+grpcio>=1.32.0
+h5py==3.1.0
 idna==2.10
 importlib-metadata==3.7.0
 Keras==2.4.3
@@ -34,10 +34,10 @@ requests-oauthlib==1.3.0
 rsa==4.7.2
 scipy==1.6.1
 six==1.15.0
-tensorboard==2.4.1
+tensorboard==2.5.0
 tensorboard-plugin-wit==1.8.0
 tensorflow==2.5.2
-tensorflow-estimator==2.4.0
+tensorflow-estimator==2.5.0
 termcolor==1.1.0
 typing-extensions==3.7.4.3
 urllib3==1.26.5
